Added storybook. Added header and footer. Added theming support.

--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -4,26 +4,35 @@
 
 :root {
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--text-primary);
+  background-color: var(--bg-primary);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --clr-primary: theme("colors.blue.400");
+
+  --bg-primary: theme("colors.white");
+  --bg-site-banner: theme("colors.blue.100");
+  --bg-primary-gradient: linear-gradient(to bottom, theme("colors.sky.400"), theme("colors.cyan.200"), theme("colors.sky.400"));
+
+  --text-primary: theme('colors.black');
 }
 
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 320px;
   min-height: 100vh;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --clr-primary: theme("colors.blue.700");
+
+    --bg-primary: theme("colors.gray.700");
+    --bg-site-banner: theme("colors.slate.950");
+    --bg-primary-gradient: linear-gradient(to bottom, theme("colors.slate.900"), theme("colors.blue.950"), theme("colors.slate.900"));
+
+    --text-primary: theme('colors.white');
   }
 }
