Renamed "Icon" -> "IconWithText" to better reflect the function of the component. Refactored component to take an Icon as a parameter. Created implementation of Nav for Mobile. Adjusted Footer/Header styles to better suit Mobile

--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -13,7 +13,7 @@
   background-color: var(--bg-primary);
 
   --clr-primary: theme("colors.blue.600");
-  --clr-secondary: theme("colors.amber.700");
+  --clr-secondary: theme("colors.green.700");
 
   --bg-primary: theme("colors.white");
 
