Updated Search component to include additional properties and added accessibility "role" attribute. Added "--horizontal-gutter" CSS variable to keep footer and header horizontal spacing the same. Added "container-queries" Tailwind plugin. Added User Nav items and Product Search to mobile nav. Adjusted Mobile Nav styles. Adjusted "text-primary" name in Tailwind config

--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -12,6 +12,10 @@
   color: var(--text-primary);
   background-color: var(--bg-primary);
 
+  /* Spacing */
+  --horizontal-gutter: theme("space.8");
+
+  /* Theme */
   --clr-primary: theme("colors.blue.600");
   --clr-secondary: theme("colors.green.700");
 
